<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>summit_utils</name>
  <version>0.0.1</version>
  <description>Summit Utils</description>
  <maintainer email="juan.cely@urjc.es">Juan S. Cely G.</maintainer>
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  
  <!-- Robotnik packages -->

  <!-- ROS2 packages -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Packages for teleoperation -->
  <exec_depend>joy</exec_depend>
  <depend>twist_stamper</depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>